removed images parameter, use folder or pdf generation